--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <li>Add to <a class="btn btn-sm btn-default" href="installer://add/https://max21910.github.io/Max-Studio-repo-for-cydia-and-other/">Installer</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
 <li>Add to <a class="btn btn-sm btn-default" href="sileo://source/https://max21910.github.io/Max-Studio-repo-for-cydia-and-other/E">Sileo</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
 <li>Add to <a class="btn btn-sm btn-default" href="zbra://sources/add/https://max21910.github.io/Max-Studio-repo-for-cydia-and-other/">Zebra</a></li> <!-- Put your repo URL in REPLACEHERE, remove this comment. -->
-thanks for using <a class="btn btn-sm btn-default" href="https://max21910.github.io/Max-Studio-repo-for-cydia-and-other/">Max-Studio</a> by Max21910! <!-- This can be removed, but I'd appreciate if this was left or edited to still include the link to repo.me! -->
+thanks for using <a class="btn btn-sm btn-default" href="https://max21910.github.io/Max-Studio-repo-for-cydia-and-other/">Max-Studio</a> by Max21910! v1.2 <!-- This can be removed, but I'd appreciate if this was left or edited to still include the link to repo.me! -->
 </center></pre>
